# running-analysis

./: .gitignore  CLAUDE.md  README.md  course_speed_factors.ipynb  eda.ipynb  evt.ipynb  export_pdf.sh  initial.ipynb  model.ipynb  pyproject.toml  runner_id_report.md
analyses/speed_factors/: compute.py  plots.py  run.py
parkrun/: data.py  runner_id.py  utils.py
